# Kursovaya

./: README.md  main.py  pyproject.toml  requirements.txt  utils.py
tests/: test_utils.py
