[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["mklop <mklopuno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
